# model_choice

./: .gitignore  AI_GUIDE.md  README.md  possibilities_tree.json  pyproject.toml  seed.md  test_ollama.py  test_rate_limiter.py  test_streaming_and_cache.py  test_templates.py  tree.json  tree_v2.json
model_choice/: __init__.py  backends.py  cache.py  classifier.py  cli.py  config.py  fallback.py  ollama.py  parsers.py  rate_limiter.py  registry.py  templates.py  tracking.py
model_choice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rfl_design/: conversation.jsonl  conversation.md  loop_log.jsonl
rfl_design/snapshots/: iter_001.json  iter_002.json
